# discord-zotero-bot

./: .dockerignore  .env.example  ARXIV_TROUBLESHOOTING.md  BIORXIV_SUPPORT.md  CHANGELOG.md  DEBUGGING_DUPLICATES.md  DUPLICATE_DETECTION.md  Dockerfile  GETTING_STARTED.md  METADATA_IMPROVEMENTS.md  README.md  TAGGING_AND_ABSTRACTS.md  TESTING.md  compose.yml  config.py  extractors.py  library.py  metadata.py  pyproject.toml  test_abstract_cleaning.py  test_biorxiv.py  zotero-bot.py
.github/workflows/: ci.yml  docker.yml
docs/: index.md  pdf_attachments.md  project_structure.md  troubleshooting_pdf_attachments.md
docs/support/: doi_crossref_support.md  pubmed_support.md
tests/: README.md  test_abstract_cleaning.py  test_arxiv_live.py  test_biorxiv.py  test_duplicates.py  test_pdf_urls.py  test_zotero_attachment.py
