[project]
name = "zotero-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.4",
    "python-dotenv>=1.2.1",
    "pyzotero>=1.7.6",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]
