[project]
name = "zotero-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.0.0",
    "discord-py>=2.6.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "pyzotero>=1.7.6",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]
